exports[`Component: <Category /> should map "breakfast"-category 1`] = `
<div
  className="eskeaq">
  Frühstück
</div>
`;

exports[`Component: <Category /> should map "dessert"-category 1`] = `
<div
  className="eskeaq">
  Dessert & Backen
</div>
`;

exports[`Component: <Category /> should map "dinner"-category 1`] = `
<div
  className="eskeaq">
  Abendessen
</div>
`;

exports[`Component: <Category /> should map "lunch"-category 1`] = `
<div
  className="eskeaq">
  Mittagessen
</div>
`;

exports[`Component: <Category /> should map "snack"-category 1`] = `
<div
  className="eskeaq">
  Kleinigkeiten & Snacks
</div>
`;

exports[`Component: <Category /> should omit an unknown category 1`] = `null`;
